Fixed layout bug in results page if there are no badges

--- a/app/assets/stylesheets/components/_ticket.scss
+++ b/app/assets/stylesheets/components/_ticket.scss
@@ -105,7 +105,7 @@
 
     .airline-checkmark {
       position: absolute;
-      bottom: 300px;
+      top: 360px;
       right: 100px;
     }
 
@@ -134,7 +134,7 @@
 
     .airline-correct-answer {
       position: absolute;
-      bottom: 290px;
+      top: 362px;
       left: 100px;
       font-size: 48px;
     }
